--- a/src/main/resources-filtered/META-INF/resources/semanticcms-theme-documentation/error.inc.jspx
+++ b/src/main/resources-filtered/META-INF/resources/semanticcms-theme-documentation/error.inc.jspx
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 semanticcms-theme-documentation - SemanticCMS theme tailored for technical documentation.
-Copyright (C) 2015, 2016, 2019  AO Industries, Inc.
+Copyright (C) 2015, 2016, 2017, 2018, 2019  AO Industries, Inc.
 	support@aoindustries.com
 	7262 Bull Pen Cir
 	Mobile, AL 36695
@@ -123,11 +123,23 @@ Arguments:
 			<ao:link href="styles/page-print.css" media="print" rel="stylesheet" type="text/css" />
 			<!-- TODO: This causes a 404 error where docs-taglib not deployed.  Register as a headInclude from docs-taglib -->
 			<ao:link href="/styles/page-print.css" media="print" rel="stylesheet" type="text/css" />
-			<ao:script src="/webjars/jquery/@{org.webjars:jquery:jar.version}/jquery.min.js" />
+			<!-- Application-wide CSS -->
+			<c:forEach var="cssLink" items="${applicationScope.semanticCMS.cssLinks}">
+				<ao:link href="${cssLink}" rel="stylesheet" type="text/css" />
+			</c:forEach>
+			<!-- Per-view links -->
+			<c:forEach var="link" items="${core:getViewLinks(null, page)}">
+				<ao:link link="${link}" />
+			</c:forEach>
+			<!-- Application-wide scripts merged with view-specific scripts -->
+			<c:forEach var="script" items="${core:mergeGlobalAndViewScripts(null)}">
+				<ao:script src="${script.value}" />
+			</c:forEach>
 			<!-- Application-wide head includes -->
 			<c:forEach var="headInclude" items="${applicationScope.semanticCMS.headIncludes}">
 				<ao:include page="${headInclude}" />
 			</c:forEach>
+			<ao:meta name="robots" content="noindex, nofollow" />
 			<core:doComponents view="${null}" page="${null}" position="HEAD_END" reverse="true" />
 		</head>
 		<body>
