--- a/book/src/main/resources-filtered/META-INF/resources/theme-documentation/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/theme-documentation/changelog.jspx
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 semanticcms-theme-documentation - SemanticCMS theme tailored for technical documentation.
-Copyright (C) 2016, 2017, 2019, 2020  AO Industries, Inc.
+Copyright (C) 2016, 2017, 2019, 2020, 2021  AO Industries, Inc.
     support@aoindustries.com
     7262 Bull Pen Cir
     Mobile, AL 36695
@@ -36,8 +36,8 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		title="@{documented.name} Changelog"
 		shortTitle="Changelog"
 		tocLevels="1"
-		datePublished="2016-10-31T02:51:43-0500"
-		dateModified="2020-11-27T21:56:25-06:00"
+		datePublished="2016-10-31T02:51:43-05:00"
+		dateModified="2021-05-22T13:07:02-05:00"
 	>
 		<c:if test="${fn:endsWith('@{project.version}', '-SNAPSHOT') and !fn:endsWith('@{project.version}', '-POST-SNAPSHOT')}">
 			<changelog:release
@@ -46,7 +46,11 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 				groupId="@{project.groupId}"
 				artifactId="@{documented.artifactId}"
 				scmUrl="@{project.scm.url}"
-			/>
+			>
+				<ul>
+					<li>Updated to <ao:a rel="nofollow" href="https://www.oracle.com/java/technologies/javaee/javaeetechnologies.html#javaee7">Java™ EE 7 Web Profile</ao:a> (Servlet 3.1, JSP 2.3, EL 3.0, and JSTL 1.2).</li>
+				</ul>
+			</changelog:release>
 		</c:if>
 
 		<changelog:release
@@ -117,7 +121,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.8.0"
-			datePublished="2019-10-12T01:00:20-0500"
+			datePublished="2019-10-12T01:00:20-05:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -133,7 +137,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.7.0"
-			datePublished="2019-06-22T05:45:18-0500"
+			datePublished="2019-06-22T05:45:18-05:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -157,7 +161,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.6.2"
-			datePublished="2017-07-20T14:37:18-0500"
+			datePublished="2017-07-20T14:37:18-05:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -171,7 +175,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.6.1"
-			datePublished="2016-11-16T06:56:44-0600"
+			datePublished="2016-11-16T06:56:44-06:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -187,7 +191,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.6.0"
-			datePublished="2016-10-20T19:36:00-0500"
+			datePublished="2016-10-20T19:36:00-05:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -206,7 +210,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.5.1"
-			datePublished="2016-10-11T20:52:00-0500"
+			datePublished="2016-10-11T20:52:00-05:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -220,7 +224,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.5.0"
-			datePublished="2016-10-04T23:12:00-0500"
+			datePublished="2016-10-04T23:12:00-05:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -236,7 +240,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.4"
-			datePublished="2016-09-11T17:26:00-0500"
+			datePublished="2016-09-11T17:26:00-05:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -253,7 +257,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.3"
-			datePublished="2016-09-03T11:11:00-0500"
+			datePublished="2016-09-03T11:11:00-05:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -266,7 +270,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.2"
-			datePublished="2016-08-28T20:57:00-0500"
+			datePublished="2016-08-28T20:57:00-05:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -292,7 +296,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.1"
-			datePublished="2016-08-21T18:33:00-0500"
+			datePublished="2016-08-21T18:33:00-05:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -306,7 +310,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.0"
-			datePublished="2016-08-19T16:47:00-0500"
+			datePublished="2016-08-19T16:47:00-05:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
