--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/error-pages/404.inc.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/error-pages/404.inc.jspx
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 semanticcms-theme-documentation - SemanticCMS theme tailored for technical documentation.
-Copyright (C) 2015, 2016, 2020  AO Industries, Inc.
+Copyright (C) 2015, 2016, 2020, 2021  AO Industries, Inc.
 	support@aoindustries.com
 	7262 Bull Pen Cir
 	Mobile, AL 36695
@@ -24,7 +24,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 <jsp:root
 	xmlns:jsp="http://java.sun.com/JSP/Page"
 	version="2.1"
-	xmlns:ao="https://aoindustries.com/ao-taglib/"
+	xmlns:ao="https://oss.aoapps.com/taglib/"
 >
 	<jsp:directive.page language="java" pageEncoding="UTF-8" />
 	<jsp:directive.page session="false" />
