--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/jslib/yui-2.9.0/head.inc.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/jslib/yui-2.9.0/head.inc.jspx
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 semanticcms-theme-documentation - SemanticCMS theme tailored for technical documentation.
-Copyright (C) 2013, 2014, 2016, 2020  AO Industries, Inc.
+Copyright (C) 2013, 2014, 2016, 2020, 2021  AO Industries, Inc.
 	support@aoindustries.com
 	7262 Bull Pen Cir
 	Mobile, AL 36695
@@ -28,7 +28,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 	@see  http://developer.yahoo.com/yui/treeview/#start
 -->
 <jsp:root
-	xmlns:ao="https://aoindustries.com/ao-taglib/"
+	xmlns:ao="https://oss.aoapps.com/taglib/"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:jsp="http://java.sun.com/JSP/Page"
 	version="2.1"
