--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/navigation.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/navigation.jspx
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 semanticcms-theme-documentation - SemanticCMS theme tailored for technical documentation.
-Copyright (C) 2013, 2014, 2015, 2016, 2019, 2020  AO Industries, Inc.
+Copyright (C) 2013, 2014, 2015, 2016, 2019, 2020, 2021  AO Industries, Inc.
 	support@aoindustries.com
 	7262 Bull Pen Cir
 	Mobile, AL 36695
@@ -29,13 +29,13 @@ Arguments:
 	arg.page  The page that should be opened by default in the navigation tree.
 -->
 <jsp:root
-	xmlns:ao="https://aoindustries.com/ao-taglib/"
+	xmlns:ao="https://oss.aoapps.com/taglib/"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:core="https://semanticcms.com/core/taglib/"
-	xmlns:encoding="https://aoindustries.com/ao-encoding/taglib/"
+	xmlns:encoding="https://oss.aoapps.com/encoding/taglib/"
 	xmlns:fn="http://java.sun.com/jsp/jstl/functions"
 	xmlns:jsp="http://java.sun.com/JSP/Page"
-	xmlns:wr="https://aoindustries.com/ao-web-resources/taglib/"
+	xmlns:wr="https://oss.aoapps.com/web-resources/taglib/"
 	version="2.1"
 >
 	<jsp:directive.page language="java" pageEncoding="UTF-8" />
@@ -136,7 +136,7 @@ Arguments:
 				semanticcms_theme_documentation_navigation.tree.subscribe("enterKeyPressed", semanticcms_theme_documentation_navigation.treeEnterKeyPressed);
 				semanticcms_theme_documentation_navigation.tree.render();
 				// TODO: The tree is double-encoding things
-				//       See https://aoindustries.com/ao-taglib/ao.tld/tags?navigation=true
+				//       See https://oss.aoapps.com/taglib/ao.tld/tags?navigation=true
 				jQuery(function() {
 					semanticcms_theme_documentation_navigation.highlightPage(<ao:out value="${core:encodeHexData(arg.page.pageRef)}" />);
 				});
