--- a/book/src/main/resources-filtered/META-INF/resources/theme-documentation/index.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/theme-documentation/index.jspx
@@ -51,6 +51,7 @@ along with semanticcms-theme-documentation.  If not, see <https://www.gnu.org/li
         arg.license="lgpl-3.0"
         arg.scmUrl="@{project.scm.url}"
         arg.githubBuildWorkflow="Build"
+        arg.githubBuildFile="build.yml"
         arg.mavenBadge="maven-central"
         arg.groupId="@{project.groupId}"
         arg.artifactId="@{documented.artifactId}"
